# Switch-Bots-Python-Library

./: .gitignore  404.html  Dockerfile  README.md  changelog.md  index.html  opensearch.xml  publish.sh  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml  tests.py
src/: main.py  publish.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tests.py
src/docs/: config.md  error.md  types.md
src/pyswitch/: app.py  bot_app.py  config.py  types.py
src/pyswitch/api/: api_client.py
src/pyswitch/base/: rest_request.py  rest_response.py  switch_client.py  switch_object.py  switch_ws_async_client.py
src/pyswitch/bots/: bot.py  bot_context.py  register_command.py
src/pyswitch/utils/: rest_client.py  types.py
src/samples/: channel_example.py  decoratorbot.py  echobot.py  example_02.py  example_download.py  inline_keyboard.py  inline_query_example.py  test.py
src/swibots/: __init__.py  app.py  bot_app.py  config.py  types.py
src/swibots/api/: api_client.py
src/swibots/base/: __init__.py  rest_request.py  rest_response.py  switch_client.py  switch_object.py
src/swibots/bots/: bot.py
src/swibots/utils/: rest_client.py  types.py
src/switch/: __init__.py  app.py  bot_app.py  config.py  error.py  switch_app.py  types.py
src/switch/api/: __init__.py  api_client.py  switch_client.py
src/switch/base/: __init__.py  rest_controller.py  rest_request.py  rest_response.py  switch_client.py  switch_object.py  switch_ws_async_client.py
src/switch/bots/: __init__.py  base_handler.py  bot.py  bot_context.py  command.py  (+12 more)
src/tests/: ws.py
(+1576 files in other folders)
