[tool.black]
line-length = 99
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.isort]  # black config
profile = "black"
line_length = 99

[tool.ruff]
line-length = 99


[project]
name = "swibots"
version = "1.0.1"
authors = [
  { name="Pablo Ramirez", email="pablo@pramirez.dev" },
]
description = "Switch bot api"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/switchcollab/Switch-Bots-Python-Library"